tests/qd/compile_errors/undefined_function.qd
// Test: calling undefined function should fail

fn main() {
	10 20 undefined_function
}
